added batch delete to all index views

--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -4,6 +4,34 @@
 
 $(document).ready ->
 
+
+    # BEGIN BATCH DELETE
+
+    $("#batch_destroy").click ->
+        $("#destroy_cars").submit()
+
+    selectedItems = 0
+    $(".car_checkbox").click ->
+        if $(this).is(":checked")
+            selectedItems++
+            console.log selectedItems
+            $("#quick-access").css "bottom", "0px"
+            $(this).parent().parent().parent().toggleClass "row_selected"
+        else
+            selectedItems--
+            console.log selectedItems
+            $("#quick-access").css "bottom", "0px"
+            $(this).parent().parent().parent().toggleClass "row_selected"
+            $("#quick-access").css "bottom", "-115px"  if selectedItems is 0
+
+        #Quick action dismiss Event
+        $("#quick-access .btn-cancel").click ->
+            $("#quick-access").css "bottom", "-115px"
+            $("#email-list .checkbox").children("input").attr "checked", false
+            $("#emails tbody tr").removeClass "row_selected"
+
+    # END BATCH DELETE
+
     if (typeof gon != "undefined") && gon.resource == "cars"
         class CustomMarkerBuilder extends Gmaps.Google.Builders.Marker
             create_marker: ->
