--- a/app/assets/javascripts/groups.js.coffee.erb
+++ b/app/assets/javascripts/groups.js.coffee.erb
@@ -4,6 +4,31 @@
 
 $(document).ready ->
 
+
+  $("#batch_destroy").click ->  
+    $("#destroy_groups").submit()
+
+  selectedItems = 0
+  $(".group_checkbox").click ->
+    if $(this).is(":checked")
+      selectedItems++
+      console.log selectedItems
+      $("#quick-access").css "bottom", "0px"
+      $(this).parent().parent().parent().toggleClass "row_selected"
+    else
+      selectedItems--
+      console.log selectedItems
+      $("#quick-access").css "bottom", "0px"
+      $(this).parent().parent().parent().toggleClass "row_selected"
+      $("#quick-access").css "bottom", "-115px"  if selectedItems is 0
+
+    #Quick action dismiss Event
+    $("#quick-access .btn-cancel").click ->
+      $("#quick-access").css "bottom", "-115px"
+      $("#email-list .checkbox").children("input").attr "checked", false
+      $("#emails tbody tr").removeClass "row_selected"
+
+
   $('.page-sidebar').css('height',$('.page-content').css('height'))
 
   if (typeof gon != "undefined") && gon.resource == "groups" && gon.map_id == "groups_show"
