--- a/app/views/cars/index.html.haml
+++ b/app/views/cars/index.html.haml
@@ -1,90 +1,99 @@
-.row
-  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
-    .page-title
-      %h3
-        Vehicles List
-  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-    .pull-right= link_to 'Create', new_car_path, class: "btn btn-success"
+.content
+  .row
+    .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+      .page-title
+        %h3
+          Vehicles List
+    .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+      .pull-right= link_to 'Create', new_car_path, class: "btn btn-success"
 
 
-= form_tag '', :method => :get do
+  
   .row
     .col-md-3
       .row
         .col-md-12
-          .grid.simple
-            .grid-title
-              %h4 Vehicle Model
-            .grid-body
-              = select_tag('by_car_model', content_tag(:option,'Vehicle Models ...', :value=>"")+options_from_collection_for_select(CarModel.all, 'id', 'name', params[:by_car_model] ), :class => "form-control" )
-      .row  
-        .col-md-12
-          .grid.simple
-            .grid-title
-              %h4 Vehicle Type
-            .grid-body
-              = select_tag('by_car_type', content_tag(:option,'Vehicle Types ...', :value=>"")+options_from_collection_for_select(CarType.all, 'id', 'name', params[:by_car_type]), :class => "form-control")
-      .row  
-        .col-md-12
-          .grid.simple
-            .grid-title
-              %h4 Traceability
-            .grid-body
-              %label                
-                = radio_button_tag 'trackable', 'all' , checked_radio_button(params[:trackable], "all")
-                = "All"
-              %label 
-                = radio_button_tag 'trackable', 'true' , checked_radio_button(params[:trackable], "true")
-                = "Traceable" 
-              %label
-                = radio_button_tag 'trackable', 'false' , checked_radio_button(params[:trackable], "false")
-                = "Not Traceable"
-      .row
-        .col-md-12
-          .grid.simple
-            .grid-title
-              %h4 Driver
-            .grid-body
-              .row
-                .col-md-12
-                  %label
-                    = radio_button_tag 'has_driver', 'all' , checked_radio_button(params[:has_driver], 'all')
-                    = "All"
-                  %label 
-                    = radio_button_tag 'has_driver', 'true' , checked_radio_button(params[:has_driver], 'true')
-                    = "With driver" 
-                  %label
-                    = radio_button_tag 'has_driver', 'false' , checked_radio_button(params[:has_driver], 'false')
-                    = "Without driver"
-      .row
-        .col-md-12
-          = submit_tag 'Apply Filters', :class => "btn btn-default"    
+          = form_tag '', :method => :get do
+            .row
+              .col-md-12
+                .grid.simple
+                  .grid-title
+                    %h4 Vehicle Model
+                  .grid-body
+                    = select_tag('by_car_model', content_tag(:option,'Vehicle Models ...', :value=>"")+options_from_collection_for_select(CarModel.all, 'id', 'name', params[:by_car_model] ), :class => "form-control" )
+            .row  
+              .col-md-12
+                .grid.simple
+                  .grid-title
+                    %h4 Vehicle Type
+                  .grid-body
+                    = select_tag('by_car_type', content_tag(:option,'Vehicle Types ...', :value=>"")+options_from_collection_for_select(CarType.all, 'id', 'name', params[:by_car_type]), :class => "form-control")
+            .row  
+              .col-md-12
+                .grid.simple
+                  .grid-title
+                    %h4 Traceability
+                  .grid-body
+                    %label                
+                      = radio_button_tag 'trackable', 'all' , checked_radio_button(params[:trackable], "all")
+                      = "All"
+                    %label 
+                      = radio_button_tag 'trackable', 'true' , checked_radio_button(params[:trackable], "true")
+                      = "Traceable" 
+                    %label
+                      = radio_button_tag 'trackable', 'false' , checked_radio_button(params[:trackable], "false")
+                      = "Not Traceable"
+            .row
+              .col-md-12
+                .grid.simple
+                  .grid-title
+                    %h4 Driver
+                  .grid-body
+                    .row
+                      .col-md-12
+                        %label
+                          = radio_button_tag 'has_driver', 'all' , checked_radio_button(params[:has_driver], 'all')
+                          = "All"
+                        %label 
+                          = radio_button_tag 'has_driver', 'true' , checked_radio_button(params[:has_driver], 'true')
+                          = "With driver" 
+                        %label
+                          = radio_button_tag 'has_driver', 'false' , checked_radio_button(params[:has_driver], 'false')
+                          = "Without driver"
+            .row
+              .col-md-12
+                = submit_tag 'Apply Filters', :class => "btn btn-default"    
 
     .col-md-9
-      
-      .row
-        .col-md-12
-          .grid.simple 
-            .grid-body
-              %table.table.no-more-tables
-                %thead
-                  %tr
-                    = content_tag :th, sort_link(@q, :name)
-                    = content_tag :th, sort_link(@q, :numberplate)
-                    = content_tag :th, sort_link(@q, :car_model)
-                    = content_tag :th, sort_link(@q, :car_type)
-                    %th
-                    %th
-                    %th
-                %tbody
-                  
-                  - @cars.each do |car|
+      = form_tag batch_destroy_cars_path, id: "destroy_cars", :method => :put do
+        .row
+          .col-md-12
+            .grid.simple 
+              .grid-body
+                %table.table.no-more-tables
+                  %thead
                     %tr
-                      %td= link_to car.name, car
-                      %td= car.numberplate
-                      %td= car.try(:car_model).try(:name)
-                      %td= car.try(:car_type).try(:name)
-                      %td= link_to 'Edit', edit_car_path(car)
-                      %td= link_to 'Destroy', car, :method => :delete, :data => { :confirm => 'Are you sure?' }
+                      %th
+                      = content_tag :th, sort_link(@q, :name)
+                      = content_tag :th, sort_link(@q, :numberplate)
+                      = content_tag :th, sort_link(@q, :car_model)
+                      = content_tag :th, sort_link(@q, :car_type)
+                      %th
+                  %tbody
+                    
+                    - @cars.each do |car|
+                      %tr
+                        %td.small-cell.v-align-middle= check_box_tag "car_ids[]", car.id, nil , class: "car_checkbox"
+                        %td= link_to car.name, car
+                        %td= car.numberplate
+                        %td= car.try(:car_model).try(:name)
+                        %td= car.try(:car_type).try(:name)
+                        %td= link_to 'Edit', edit_car_path(car)
 
+#quick-access.admin-bar{:style => "bottom: -115px;"}
+  .admin-bar-inner
+    %button.btn.btn-danger.btn-add{type: "button", id: "batch_destroy"}
+      %i.icon-trash
+      Move to trash
+    %button.btn.btn-white.btn-cancel{:type => "button"} Cancel
 
