--- a/app/views/devices/index.html.haml
+++ b/app/views/devices/index.html.haml
@@ -1,114 +1,122 @@
-
-.row
-  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
-    .page-title
-      %h3
-        Devices List 
-  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-    .pull-right= link_to 'Create', new_device_path, class: "btn btn-success"
-
-
-.row
-  .col-md-3
-    .row
-      .col-md-12
-        .grid.simple
-          .grid-title
-            %h4
-              Search 
-            .tools
-              %a.collapse{href: "javascript:;"}
-          .grid-body 
-            = search_form_for @q do |f| 
-              .form-group
-                = f.search_field :name_cont, :placeholder => "Search with name"
-              .form-group
-                = f.submit "Search", :class => "btn btn-default"
-    .row
-      .col-md-12
-        = form_tag '', :method => :get do
-          .row
-            .col-md-12
-              .grid.simple
-                .grid-title
-                  %h4 Device Model
-                  .tools
-                    %a.collapse{href: "javascript:;"}
-                .grid-body
-                  = select_tag( :by_device_model, options_for_select(all_device_models, params[:by_device_model]), :include_blank => true, :class => "form-control")
-          .row  
-            .col-md-12
-              .grid.simple
-                .grid-title
-                  %h4 Device Type
-                  .tools
-                    %a.collapse{href: "javascript:;"}
-                .grid-body
-                  = select_tag( :by_device_type, options_for_select(all_device_types, params[:by_device_type]), :include_blank => true, :class => "form-control")
-          .row  
-            .col-md-12
-              .grid.simple
-                .grid-title
-                  %h4 Traceability
-                  .tools
-                    %a.collapse{href: "javascript:;"}
-                .grid-body
-                  %label
-                    = radio_button_tag 'has_simcard', 'all' , checked_radio_button(params["has_simcard"], 'all')
-                    = "All"
-                  %label
-                    = radio_button_tag 'has_simcard', 'true' , checked_radio_button(params["has_simcard"], 'true')
-                    = "With Simcard" 
-                  %label
-                    = radio_button_tag 'has_simcard', 'false' , checked_radio_button(params["has_simcard"], 'false')
-                    = "Without Simcard"
-                      
-          .row  
-            .col-md-12
-              .grid.simple
-                .grid-title
-                  %h4 Driver
-                  .tools
-                    %a.collapse{href: "javascript:;"}
-                .grid-body
-                  %label
-                    = radio_button_tag 'available', 'all' , checked_radio_button(params["has_simcard"], 'all')
-                    = "All"
-                  %label
-                    = radio_button_tag 'available', 'true' , checked_radio_button(params["has_simcard"], 'true')
-                    = "Available" 
-                  %label
-                    = radio_button_tag 'available', 'false' , checked_radio_button(params["has_simcard"], 'false')
-                    = "Used"
-          .row
-            .col-md-12
-              .pull-right= submit_tag 'Apply Filters', :class => "btn btn-success"
-          %br/
+.content
+  .row
+    .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+      .page-title
+        %h3
+          Devices List 
+    .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+      .pull-right= link_to 'Create', new_device_path, class: "btn btn-success"
 
 
-  .col-md-9
-    
-    .row
-      .col-md-12
-        .grid.simple
-          .grid-body 
-            %table.table.no-more-tables
-              %thead
-                %tr
-                  = content_tag :th, sort_link(@q, :name)
-                  = content_tag :th, sort_link(@q, :emei)
-                  = content_tag :th, sort_link(@q, :cost_price)
-                  %th
-                  %th  
-              %tbody
-                
-                - @devices.each do |device|
-                  %tr
-                    %td= link_to device.name, device
-                    %td= device.emei
-                    %td= device.cost_price
-                    %td= link_to 'Edit', edit_device_path(device)
-                    %td= link_to 'Destroy', device, :method => :delete, :data => { :confirm => 'Are you sure?' }
+  .row
+    .col-md-3
+      .row
+        .col-md-12
+          .grid.simple
+            .grid-title
+              %h4
+                Search 
+              .tools
+                %a.collapse{href: "javascript:;"}
+            .grid-body 
+              = search_form_for @q do |f| 
+                .form-group
+                  = f.search_field :name_cont, :placeholder => "Search with name"
+                .form-group
+                  = f.submit "Search", :class => "btn btn-default"
+      .row
+        .col-md-12
+          = form_tag '', :method => :get do
+            .row
+              .col-md-12
+                .grid.simple
+                  .grid-title
+                    %h4 Device Model
+                    .tools
+                      %a.collapse{href: "javascript:;"}
+                  .grid-body
+                    = select_tag( :by_device_model, options_for_select(all_device_models, params[:by_device_model]), :include_blank => true, :class => "form-control")
+            .row  
+              .col-md-12
+                .grid.simple
+                  .grid-title
+                    %h4 Device Type
+                    .tools
+                      %a.collapse{href: "javascript:;"}
+                  .grid-body
+                    = select_tag( :by_device_type, options_for_select(all_device_types, params[:by_device_type]), :include_blank => true, :class => "form-control")
+            .row  
+              .col-md-12
+                .grid.simple
+                  .grid-title
+                    %h4 Traceability
+                    .tools
+                      %a.collapse{href: "javascript:;"}
+                  .grid-body
+                    %label
+                      = radio_button_tag 'has_simcard', 'all' , checked_radio_button(params["has_simcard"], 'all')
+                      = "All"
+                    %label
+                      = radio_button_tag 'has_simcard', 'true' , checked_radio_button(params["has_simcard"], 'true')
+                      = "With Simcard" 
+                    %label
+                      = radio_button_tag 'has_simcard', 'false' , checked_radio_button(params["has_simcard"], 'false')
+                      = "Without Simcard"
+                        
+            .row  
+              .col-md-12
+                .grid.simple
+                  .grid-title
+                    %h4 Driver
+                    .tools
+                      %a.collapse{href: "javascript:;"}
+                  .grid-body
+                    %label
+                      = radio_button_tag 'available', 'all' , checked_radio_button(params["has_simcard"], 'all')
+                      = "All"
+                    %label
+                      = radio_button_tag 'available', 'true' , checked_radio_button(params["has_simcard"], 'true')
+                      = "Available" 
+                    %label
+                      = radio_button_tag 'available', 'false' , checked_radio_button(params["has_simcard"], 'false')
+                      = "Used"
+            .row
+              .col-md-12
+                .pull-right= submit_tag 'Apply Filters', :class => "btn btn-success"
+            %br/
 
+
+    .col-md-9
+      = form_tag batch_destroy_devices_path, id: "destroy_devices", :method => :put do
+        .row
+          .col-md-12
+            .grid.simple
+              .grid-body 
+                %table.table.no-more-tables
+                  %thead
+                    %tr
+                      %th
+                      = content_tag :th, sort_link(@q, :name)
+                      = content_tag :th, sort_link(@q, :emei)
+                      = content_tag :th, sort_link(@q, :cost_price)
+                      %th
+                  %tbody
+                    
+                    - @devices.each do |device|
+                      %tr
+                        %td.small-cell.v-align-middle= check_box_tag "device_ids[]", device.id, nil , class: "device_checkbox"
+                        %td= link_to device.name, device
+                        %td= device.emei
+                        %td= device.cost_price
+                        %td= link_to 'Edit', edit_device_path(device)
+
+
+#quick-access.admin-bar{:style => "bottom: -115px;"}
+  .admin-bar-inner
+    %button.btn.btn-danger.btn-add{type: "button", id: "batch_destroy"}
+      %i.icon-trash
+      Move to trash
+    %button.btn.btn-white.btn-cancel{:type => "button"} Cancel
+/ = render 'modal'
 
 
