--- a/app/views/regions/index.html.haml
+++ b/app/views/regions/index.html.haml
@@ -1,30 +1,38 @@
-
-.row
-  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
-    .page-title
-      %h3
-        Regions List 
-  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-    .pull-right= link_to 'Create', new_region_path, class: "btn btn-success"
-
-
-.row
-  .col-md-12
-    .grid.simple
-      .grid-body
-        %table.table.no-more-tables
-          %thead
-            %tr
-              %th Name
-              %th
-              %th
-
-          %tbody           
-            - @regions.each do |region|
-              %tr
-                %td= link_to region.name, region
-                %td= link_to 'Edit', edit_region_path(region)
-                %td= link_to 'Destroy', region, :method => :delete, :data => { :confirm => 'Are you sure?' }
+.content
+  .row
+    .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+      .page-title
+        %h3
+          Regions List 
+    .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+      .pull-right= link_to 'Create', new_region_path, class: "btn btn-success"
 
 
+  .row
+    .col-md-12
+      = form_tag batch_destroy_regions_path, id: "destroy_regions", :method => :put do
+        .grid.simple
+          .grid-body
+            %table.table.no-more-tables
+              %thead
+                %tr
+                  %th
+                  %th Name
+                  %th
+                  %th
 
+              %tbody           
+                - @regions.each do |region|
+                  %tr
+                    %td.small-cell.v-align-middle= check_box_tag "region_ids[]", region.id, nil , class: "region_checkbox"
+                    %td= link_to region.name, region
+                    %td= link_to 'Edit', edit_region_path(region)
+
+
+#quick-access.admin-bar{:style => "bottom: -115px;"}
+  .admin-bar-inner
+    %button.btn.btn-danger.btn-add{type: "button", id: "batch_destroy"}
+      %i.icon-trash
+      Move to trash
+    %button.btn.btn-white.btn-cancel{:type => "button"} Cancel
+/ = render 'modal'
