--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,65 +1,75 @@
-.row
-  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
-    .page-title
-      %h3
-        Employees List 
-  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-    .pull-right= link_to 'Create', new_user_invitation_path, class: "btn btn-success"
+.content
+  .row
+    .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+      .page-title
+        %h3
+          Employees List 
+    .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+      .pull-right= link_to 'Create', new_user_invitation_path, class: "btn btn-success"
 
 
-.row
-  .col-md-4
-    .row
-      .col-md-12
-        .grid.simple
-          .grid-title 
-            %h4
-              Search
-            .tools
-              %a.collapse{href: "javascript:;"}
-          .grid-body 
-            = search_form_for @q do |f| 
-              .form-group
-                = f.search_field :email_cont, :placeholder => "Type email here", class: "form-control"
-              .form-group
-                = f.submit "Search", :class => "btn btn-default"
-    .row
-      .col-md-12
-        .grid.simple
-          .grid-title 
-            %h4
-              Filter by Roles
-            .tools
-              %a.collapse{href: "javascript:;"}
-          .grid-body
-            = form_tag '', :method => :get do
-              .form-group
-                = select_tag( :by_role, options_for_select(all_roles, params[:by_role]), :include_blank => true, class: "form-control")              
-              .form-group
-                = submit_tag 'Filter', :class => "btn btn-primary"
-  
-  .col-md-8
-    .row
-      .col-md-12
-        .grid.simple
-          .grid-body  
-            %table.table.no-more-tables
-              %thead
-                %tr
-                  = content_tag :th, sort_link(@q, :name)
-                  = content_tag :th, sort_link(@q, :email)
-                  %th Roles
-                  %th
-                  %th
+  .row
+    .col-md-4
+      .row
+        .col-md-12
+          .grid.simple
+            .grid-title 
+              %h4
+                Search
+              .tools
+                %a.collapse{href: "javascript:;"}
+            .grid-body 
+              = search_form_for @q do |f| 
+                .form-group
+                  = f.search_field :email_cont, :placeholder => "Type email here", class: "form-control"
+                .form-group
+                  = f.submit "Search", :class => "btn btn-default"
+      .row
+        .col-md-12
+          .grid.simple
+            .grid-title 
+              %h4
+                Filter by Roles
+              .tools
+                %a.collapse{href: "javascript:;"}
+            .grid-body
+              = form_tag '', :method => :get do
+                .form-group
+                  = select_tag( :by_role, options_for_select(all_roles, params[:by_role]), :include_blank => true, class: "form-control")              
+                .form-group
+                  = submit_tag 'Filter', :class => "btn btn-primary"
+    
+    .col-md-8
+      .row
+        .col-md-12
+          = form_tag batch_destroy_users_path, id: "destroy_users", :method => :put do
+            .grid.simple
+              .grid-body  
+                %table.table.no-more-tables
+                  %thead
+                    %tr
+                      %th
+                      = content_tag :th, sort_link(@q, :name)
+                      = content_tag :th, sort_link(@q, :email)
+                      %th Roles
+                      %th
+                      %th
 
-              %tbody           
-                - @users.each do |user|
-                  %tr
-                    %td= link_to user.name, user
-                    %td= user.email
-                    %td= user.roles.to_a.join(', ')
-                    %td= link_to 'Edit', edit_user_path(user)
-                    %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
+                  %tbody           
+                    - @users.each do |user|
+                      %tr
+                        %td.small-cell.v-align-middle= check_box_tag "user_ids[]", user.id, nil , class: "user_checkbox"
+                        %td= link_to user.name, user
+                        %td= user.email
+                        %td= user.roles.to_a.join(', ')
+                        %td= link_to 'Edit', edit_user_path(user)
+                        %td= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-
+#quick-access.admin-bar{:style => "bottom: -115px;"}
+  .admin-bar-inner
+    %button.btn.btn-danger.btn-add{type: "button", id: "batch_destroy"}
+      %i.icon-trash
+      Move to trash
+    %button.btn.btn-white.btn-cancel{:type => "button"} Cancel
+/ = render 'modal'
 
