--- a/app/views/work_schedule_groups/_form.html.haml
+++ b/app/views/work_schedule_groups/_form.html.haml
@@ -6,11 +6,9 @@
         - @work_schedule_group.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :company_id
-    = f.number_field :company_id
-  .field
-    = f.label :work_schedule_id
-    = f.number_field :work_schedule_id
-  .actions
-    = f.submit 'Save'
+  .form-group
+    = f.label :name, class: "form-label"
+    = f.text_field :name, class: "form-control"
+  
+  .form-group
+    = f.submit 'Save', class: "btn btn-primary"
