--- a/app/views/work_schedule_groups/show.html.haml
+++ b/app/views/work_schedule_groups/show.html.haml
@@ -3,19 +3,15 @@
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), work_schedule_groups_path
       %h3
-         Work Schedule Group  
+        Work Schedule Group  
   .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-    .pull-right= link_to 'Edit', edit_work_schedule_group(@work_schedule_group), class: "btn btn-success"
+    .pull-right= link_to 'Edit', edit_work_schedule_group_path(@work_schedule_group), class: "btn btn-success"
 
 .row
   .col-md-12
     .grid.simple
       .grid-body 
-    		%p
-    		  %b Company:
-    		  = @work_schedule_group.company_id
-    		%p
-    		  %b Work schedule:
-    		  = @work_schedule_group.work_schedule_id
-
+        %p
+          %b Name:
+          = @work_schedule_group.name
 
