--- a/app/views/work_schedules/index.html.haml
+++ b/app/views/work_schedules/index.html.haml
@@ -1,24 +1,33 @@
-.row
-  .col-md-6
-    .page-title
-      %h3
-        Work schedules List 
-  .col-md-6
-    .pull-right= link_to 'Create', new_work_schedule_path, class: "btn btn-success"
+.content
+  .row
+    .col-md-6
+      .page-title
+        %h3
+          Work schedules List 
+    .col-md-6
+      .pull-right= link_to 'Create', new_work_schedule_path, class: "btn btn-success"
 
-.row
-  .col-md-12
-    .grid.simple
-      .grid-body
-        %table.table.no-more-tables
-          %thead
-            %tr
-              %th Name
-              %th
+  .row
+    .col-md-12
+      = form_tag batch_destroy_work_schedules_path, id: "destroy_work_schedules", :method => :put do
+        .grid.simple
+          .grid-body
+            %table.table.no-more-tables
+              %thead
+                %tr
+                  %th
+                  %th Name
 
-          %tbody           
-            - @work_schedules.each do |work_schedule|
-              %tr
-                %td= link_to work_schedule.name.capitalize, work_schedule
-                %td= link_to 'Destroy', work_schedule, :method => :delete, :data => { :confirm => 'Are you sure?' }
+              %tbody           
+                - @work_schedules.each do |work_schedule|
+                  %tr
+                    %td.small-cell.v-align-middle= check_box_tag "work_schedule_ids[]", work_schedule.id, nil , class: "work_schedule_checkbox"
+                    %td= link_to work_schedule.name.capitalize, work_schedule
 
+#quick-access.admin-bar{:style => "bottom: -115px;"}
+  .admin-bar-inner
+    %button.btn.btn-danger.btn-add{type: "button", id: "batch_destroy"}
+      %i.icon-trash
+      Move to trash
+    %button.btn.btn-white.btn-cancel{:type => "button"} Cancel
+/ = render 'modal'
