--- a/app/views/car_manufacturers/index.html.haml
+++ b/app/views/car_manufacturers/index.html.haml
@@ -26,7 +26,7 @@
     .col-md-9
       .row
         .col-md-12
-          = form_tag batch_destroy_car_manufacturers_path, id: "destroy_alarms", :method => :put do
+          = form_tag batch_destroy_car_manufacturers_path, id: "destroy_car_manufacturers", :method => :put do
             .grid.simple
               .grid-body 
                 %table.table.no-more-tables
