--- a/app/views/car_models/index.html.haml
+++ b/app/views/car_models/index.html.haml
@@ -43,7 +43,7 @@
     .col-md-8
       .row
         .col-md-12
-          = form_tag batch_destroy_car_models_path, id: "destroy_alarms", :method => :put do
+          = form_tag batch_destroy_car_models_path, id: "destroy_car_models", :method => :put do
             .grid.simple
               .grid-body 
                 %table.table.no-more-tables
