--- a/app/views/car_types/index.html.haml
+++ b/app/views/car_types/index.html.haml
@@ -27,7 +27,7 @@
     .col-md-8
       .row
         .col-md-12
-          = form_tag batch_destroy_car_types_path, id: "destroy_alarms", :method => :put do
+          = form_tag batch_destroy_car_types_path, id: "destroy_car_types", :method => :put do
             .grid.simple
               .grid-body
                 %table.table.no-more-tables
