added validation to sign up process

--- a/app/views/companies/show.html.haml
+++ b/app/views/companies/show.html.haml
@@ -13,6 +13,9 @@
       .grid-body 
         %p
           %strong Name:
+          = @company.id
+        %p
+          %strong Name:
           = @company.name
         %p
           %strong Subdomain:
