--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -8,16 +8,19 @@
         %br/
         .row
           .col-md-8.col-sm-8.col-xs-8
-			= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
-			  = devise_error_messages!
-			  = f.hidden_field :reset_password_token
-			  %div
-			    = f.label :password, "New password"
-			    %br/
-			    = f.password_field :password, autofocus: true, autocomplete: "off"
-			  %div
-			    = f.label :password_confirmation, "Confirm new password"
-			    %br/
-			    = f.password_field :password_confirmation, autocomplete: "off"
-			  %div= f.submit "Change my password"
-			= render "devise/shared/links"
+            = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
+              = devise_error_messages!
+              = f.hidden_field :reset_password_token
+              .form-group
+                = f.label :password, "New password"
+              .form-group
+                = f.password_field :password, autofocus: true, autocomplete: "off"
+              .form-group
+                = f.label :password_confirmation, "Confirm new password"
+              .form-group
+                = f.password_field :password_confirmation, autocomplete: "off"
+              .form-group
+                = f.submit "Change my password", class: "btn btn-primary"
+            .row
+              .col-md-12
+                = render "devise/shared/links"
