fixed problem where template didn't react to mobile devices

--- a/app/assets/javascripts/groups.js.coffee.erb
+++ b/app/assets/javascripts/groups.js.coffee.erb
@@ -4,7 +4,7 @@
 
 $(document).ready ->
 
-  Utils.Actions.batch_action("#destroy_groups",".group_checkbox")
+  #Utils.Actions.batch_action("#destroy_groups",".group_checkbox")
 
   if (typeof gon != "undefined") && gon.resource == "groups" && gon.map_id == "groups_show"
 
