--- a/app/views/layouts/guest.html.haml
+++ b/app/views/layouts/guest.html.haml
@@ -5,11 +5,12 @@
     = include_gon(watch: true)
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     = csrf_meta_tags
   %body.error-body.no-top.lazy
     .container  
       .row
-        .col-md-12
+        .col-md-12.col-lg-12
           = yield
       %br/
       %br/
