--- a/app/views/layouts/index_template.html.haml
+++ b/app/views/layouts/index_template.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Trackman
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     = include_gon(watch: true)
     = stylesheet_link_tag    'application', media: 'all'
     %script{:src => "//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry", :type => "text/javascript"}
@@ -39,11 +40,6 @@
                 .iconset.top-messages
                 - if conversations_count(current_user) != 0
                   %span#msgs-badge.badge= conversations_count(current_user)
-            / BEGIN MOBILE CHAT TOGGLER
-            %li#portrait-chat-toggler.dropdown{:style => "display:none"}
-              %a.chat-menu-toggle{:href => "#sidr"}
-                .iconset.top-chat-white
-            / END MOBILE CHAT TOGGLER
           / END LOGO NAV BUTTONS
         / END NAVIGATION HEADER
         / BEGIN CONTENT HEADER
