Default Map mode should be the one that is similar to showing a route

--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -158,7 +158,7 @@ $(document).ready ->
             basicExampleEl = document.getElementById('filter_by_date');
             datepair = new Datepair(basicExampleEl);
 
-            switch_to_pins()
+            switch_to_directions()
 
             $(".switch_map_mode").click ->
                 if window.current_mode == "pins"
