--- a/app/assets/javascripts/cars/maps_modes.coffee.erb
+++ b/app/assets/javascripts/cars/maps_modes.coffee.erb
@@ -1,4 +1,32 @@
+
+
 @module "Cars", ->
+    class CustomMarkerBuilder extends Gmaps.Google.Builders.Marker
+        create_marker: ->
+            options = _.extend @marker_options(), @rich_marker_options()
+            @serviceObject = new RichMarker options
+
+        rich_marker_options: ->
+            marker = document.createElement("div")
+            marker.setAttribute('class', 'custom_marker')
+            marker.innerHTML = this.args.custom_marker
+            _.extend(@marker_options(), { flat: true })
+            { content: marker }
+
+        create_infowindow: ->
+            return null unless _.isString @args.custom_infowindow
+
+            boxText = document.createElement("div")
+            boxText.setAttribute("class", 'custom_infowindow')
+            boxText.innerHTML = @args.custom_infowindow
+            @infowindow = new InfoBox(@infobox(boxText))
+
+        infobox: (boxText)->
+            content: boxText
+            pixelOffset: new google.maps.Size(-60,-60)
+            boxStyle:
+                width: "150px"
+                
     class @Maps
         @switch_to_pins : () ->
             window.current_mode = "pins"
